2013-11-17  Carl Hetherington  <cth@carlh.net>

	* Fix specified-server discovery.

	* Version 1.30 released.

2013-11-17  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for servers crashing with different
	locales to clients.

2013-11-16  Carl Hetherington  <cth@carlh.net>

	* Bump bundled FFmpeg version to current git master.

	* Fix erroneous reset of visible channels in audio
	level dialog when changing gain.

2013-11-15  Carl Hetherington  <cth@carlh.net>

	* Use 2 decimal places for gamma controls instead
	of 1.

2013-11-14  Carl Hetherington  <cth@carlh.net>

	* Support modification of certain properties when
	there are several selected pieces of content.

	* Add server configuration back in.

2013-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.29 released.

2013-11-12  Carl Hetherington  <cth@carlh.net>

	* Fix bad_alloc exception on audio analysis (and
	probably elsewhere).

2013-11-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.28 released.

2013-11-11  Carl Hetherington  <cth@carlh.net>

	* Somewhat speculative fix for slow-downs and
	large memory consumption with multi-content playlists.

2013-11-10  Carl Hetherington  <cth@carlh.net>

	* Hopefully get rid of spurious black lines around
	preview.

2013-11-08  Carl Hetherington  <carl@ubuntu>

	* Fix strange behaviour of J2K bandwidth control
	on 32-bit Linux.

2013-11-07  Carl Hetherington  <cth@carlh.net>

	* Open file dialog starts in the configured DCP directory,
	if one exists (#70).

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Support pixel format 30 (#254).

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.27 released.

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Various server-related tidying up; servers are
	now auto-detected only (the configuration for
	them has been removed).

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.26 released.

2013-11-05  Carl Hetherington  <cth@carlh.net>

	* Auto-detect encoding servers on the local