@@ -22,6 +22,7 @@ sources = """
           filter_dialog.cc
           filter_editor.cc
           gain_calculator_dialog.cc
+          hints_dialog.cc
           job_manager_view.cc
           job_wrapper.cc
           kdm_dialog.cc
@@ -45,7 +46,7 @@ sources = """
 def configure(conf):
     args = '--cppflags --cxxflags'
     if not conf.env.STATIC:
-        args += ' --libs'
+        args += ' --libs std,richtext'
 
     conf.check_cfg(msg='Checking for wxWidgets', package='', path=conf.options.wx_config, args=args,
                    uselib_store='WXWIDGETS', mandatory=True)
@@ -53,7 +54,7 @@ def configure(conf):
     if conf.env.STATIC:
 	# wx-config returns its static libraries as full paths, without -l prefixes, which confuses
         # check_cfg(), so just hard-code it all.
-        conf.env.STLIB_WXWIDGETS = ['wx_gtk2u_xrc-2.9', 'wx_gtk2u_qa-2.9', 'wx_baseu_net-2.9', 'wx_gtk2u_html-2.9',
+        conf.env.STLIB_WXWIDGETS = ['wx_gtk2u_richtext-2.9', 'wx_gtk2u_xrc-2.9', 'wx_gtk2u_qa-2.9', 'wx_baseu_net-2.9', 'wx_gtk2u_html-2.9',
                                     'wx_gtk2u_adv-2.9', 'wx_gtk2u_core-2.9', 'wx_baseu_xml-2.9', 'wx_baseu-2.9']
         conf.env.LIB_WXWIDGETS = ['tiff', 'SM', 'dl', 'jpeg', 'png', 'X11']
  
