@@ -1,3 +1,7 @@
+2013-11-20  Carl Hetherington  <cth@carlh.net>
+
+	* Add primitive hints dialogue box.
+
 2013-11-17  Carl Hetherington  <cth@carlh.net>
 
 	* Fix specified-server discovery.
